# opentelemetry-openmetrics-text

./: Cargo.toml  Justfile  README.md  bacon.toml  build.rs  rustfmt.toml
benches/: converter.rs
src/: convert.rs  exporter.rs  fast_display.rs  format.rs  lib.rs
src/convert/: tests.rs  unit.rs
src/convert/snapshots/: opentelemetry_openmetrics__convert__tests__write_histogram.snap
tests/integration/: exporter.rs  main.rs  parsing.rs  snapshot.rs  testsupport.rs
tests/integration/snapshots/: integration__snapshot__matches_snapshot.snap
testsupport/: Cargo.toml
testsupport/src/: lib.rs  metric_data.rs  reader.rs  resource_metrics.rs  timestamps.rs
